# orcinus

./: .editorconfig  .rusty-hook.toml  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: CODEOWNERS
.github/workflow/: test_example.yml
.github/workflows/: Makefile  publish.dhall  publish.yml  test_example.dhall  test_example.yml
examples/: bb8_autossl.rs  r2d2.rs  r2d2_autossl.rs  raw_protocols.rs  raw_protocols_ssl.rs  run.rs  run_ssl.rs  testdb.sql
src/: async_utils.rs  autossl_client.rs  bb8.rs  counted_read.rs  lib.rs  r2d2.rs  resultset_stream.rs
src/mysql/: mod.rs
src/mysql/authentication/: clear_text.rs  mod.rs  secure_password.rs  sha256.rs
src/mysql/protos/: binary.rs  capabilities.rs  format.rs  handshake.rs  mod.rs  prepared.rs  status.rs  text.rs  value.rs
src/mysql/protos/text/: query.rs
