[package]
name = "orcinus"
description = "async-ready mysql protocol implementation / wrapper libraries"
version = "0.1.0"
edition = "2021"

homepage = "https://github.com/Pctg-x8/orcinus"
repository = "https://github.com/Pctg-x8/orcinus"
readme = "README.md"
license-file = "LICENSE"
keywords = ["mysql"]
categories = ["asynchronous", "database"]
exclude = ["examples/", ".vscode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.21"
parking_lot = "0.12.1"
rand = "0.8.5"
ring = "0.16.20"
rsa = "0.6"
sha2 = "0.10.2"
tokio = { version = "1.20.1", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1.20", features = ["macros", "rt-multi-thread", "net"] }
rustls = { version = "0.20.6", features = ["dangerous_configuration"] }
untrusted = "0.7"
webpki = "0.22"
x509-parser = "0.14"
tokio-rustls = "0.23.4"
webpki-roots = "0.22.4"
