[package]
name = "orcinus"
description = "async-ready mysql protocol implementation / wrapper libraries"
version = "0.2.0"
edition = "2021"

homepage = "https://github.com/Pctg-x8/orcinus"
repository = "https://github.com/Pctg-x8/orcinus"
readme = "README.md"
license-file = "LICENSE"
keywords = ["mysql"]
categories = ["asynchronous", "database"]
exclude = ["examples/", ".vscode", ".github"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
r2d2-integration = ["r2d2"]
bb8-integration = ["bb8", "async-trait"]
autossl = ["rustls", "tokio-rustls", "bufstream"]

[dependencies]
futures-util = "0.3.21"
parking_lot = "0.12.1"
r2d2 = { version = "0.8.10", optional = true }
rand = "0.8.5"
ring = "0.16.20"
rsa = "0.6"
sha1 = "0.10.1"
sha2 = "0.10.2"
tokio = { version = "1.20.1", features = ["io-util", "net"] }
x509-parser = "0.14"
rustls = { version = "0.20.6", features = ["dangerous_configuration"], optional = true }
tokio-rustls = { version = "0.23.4", optional = true }
bufstream = { version = "0.1.4", optional = true }
bb8 = { version = "0.8.0", optional = true }
async-trait = { version = "0.1.57", optional = true }

[dev-dependencies]
tokio = { version = "1.20", features = ["macros", "rt-multi-thread", "net"] }
untrusted = "0.7"
webpki = "0.22"
webpki-roots = "0.22.4"
tokio-rustls = "0.23.4"
rustls = { version = "0.20.6", features = ["dangerous_configuration"] }
rusty-hook = "0.11.2"
